# TP01_AEDS2_CPP

./: CMakeLists.txt  README.md  main.cpp
entities/Gestor/: Gestor.cpp  Gestor.h
entities/Professor/: Professor.cpp  Professor.h
entities/aluno/: Aluno.cpp  Aluno.h  Gestor.cpp  Gestor.h  Professor.cpp  Professor.h
entities/menu/: Menu.cpp  Menu.h
entities/pilha/: Pilha.cpp  Pilha.h
entities/random/: Random.cpp  Random.h
entities/structs/arvore/: Node.cpp  Node.h  Nodo_arvore.cpp  Nodo_arvore.h
entities/structs/arvore_vencedores/: arvore_vencedores.cpp  arvore_vencedores.h
entities/structs/classificacao por substituicao/: classificacao_substituicao.cpp  classificacao_substituicao.h
entities/structs/hash/: hash.cpp  hash.h
entities/structs/hash/compartimento hash/: compartimento_hash.cpp  compartimento_hash.h
entities/structs/hash/encadeamento exterior/: encadeamento_exterior.cpp  encadeamento_exterior.h
entities/structs/hash/lista compartimentos/: lista_compartimentos.cpp  lista_compartimentos.h
entities/structs/intercalacao/: intercalacao_otima.cpp  intercalacao_otima.h
entities/structs/lista/: lista_alunos.cpp  lista_alunos.h
entities/structs/pilha/: Pilha.cpp  Pilha.h
entities/structs/selecao_substituicao/: selecao_substituicao.cpp  selecao_substituicao.h
menu/: Menu.cpp  Menu.h
